# ocaml-tpm

./: .gitignore  dune-project  flake.nix  tpm2.opam  tpm2_unix.opam
lib/: clock.ml  clock.mli  command_handle.mli  command_handler.ml  command_handler.mli  command_handler_intf.ml  device.ml  device.mli  dune  get_random_bytes.ml  get_tpm_info.ml  linux_device.ml  linux_device.mli  operation.ml  pcr_read.ml  pcr_values.ml  pcr_values.mli  read_clock_op.ml
lib/commands/: command.ml  command_code.ml  command_code.mli  command_handler_instance.ml  dune  get_capabilities.ml  get_capabilities.mli  get_capability_response.ml  get_capability_response.mli  get_random.ml  get_random.mli  get_random_response.ml  get_random_response.mli  read_clock.ml  read_clock.mli  read_clock_response.ml  read_clock_response.mli  read_pcr.ml  read_pcr.mli  response.ml  self_test.ml  self_test.mli  shutdown.ml  shutdown.mli  startup.ml  startup.mli  tpm_digest.ml
lib/serialization/: command_header.ml  dune  payload.ml  payload.mli  serialization_error.ml  struct_tag.ml  tpm_algorithm_id.ml  tpm_capability.ml  tpm_get_capability.ml  tpm_get_random.ml  tpm_hash_id.ml  tpm_pcr_response.ml  tpm_pcr_selection.ml  tpm_properties.ml  tpm_random.ml  tpm_read_clock.ml  tpm_response.ml  tpm_response_code.ml
lib/types/: algorithm_id.ml  algorithm_id.mli  algorithm_intf.ml  capability.ml  command_code.ml  command_code.mli  dune  error.ml  error.mli  error_code.ml  error_code.mli  (+7 more)
nix/: mssim.nix
test/: dune  test_errors.ml  test_tpm2.ml  tests.ml
unix/: dune  linux_device.ml  linux_device.mli
(+13 files in other folders)
